# ultimatumbee-ng

./: .flake8  .gitignore  README.md  install-pytorch.sh  okteto.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements-exported.txt  requirements.txt  run-ubee.sh
.github/workflows/: on-push-sync-to-hf.yml
tests/: test_ubee.py
ubee/: __main__.py  gradiobee.py  ubee.py  uclas.py
