[tool.poetry]
name = "ultimatumbee"
version = "0.1.0"
description = "WIP"
authors = ["ffreemt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.7.0"
icecream = "^2.1.1"
transformers = "^4.16.2"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
