[tool.poetry]
name = "ultimatumbee"
version = "0.1.0"
description = "WIP"
authors = ["ffreemt"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
logzero = "^1.7.0"
icecream = "^2.1.1"
transformers = "^4.16.2"
sentencepiece = "^0.1.96"
gradio = "^2.7.5"
Jinja2 = "^3.0.3"
sklearn = "^0.0"
# torch = {version = "1.7.1", python = "^3.7", platform = "linux"}
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp38-cp38-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp38-cp38-win_amd64.whl", markers = "sys_platform == 'win32'"}
]
# numpy = "^1.21.4"
model-pool = "^0.1.3"
seg-text = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
